# DeepR

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  environment.yml  environment_CUDA.yml  pyproject.toml  setup.cfg
.github/workflows/: on-push.yml  sphinx.yml
ci/: environment-ci.yml
deepr/: __init__.py  cli.py  configs.py  main.py  workflow.py
deepr/data/: analysis.py  configuration.py  files.py  generator.py  scaler.py
deepr/data/static/: climatology.py
deepr/model/: activations.py  attention.py  autoencoder.py  autoencoder_trainer.py  conditional_ddpm.py  configs.py  conv_baseline.py  conv_bilinear.py  conv_swin2rs.py  conv_swin2sr.py  ddpm.py  decoder.py  diffusion.py  diffusion_trainer.py  encoder.py  loss.py  models.py  nn_trainer.py  resnet.py  trainer.py  transformers.py  unet.py  unet_blocks.py  utils.py
deepr/utilities/: logger.py  yml.py
deepr/validation/: generate_data.py  metrics.py  nn_performance_metrics.py  sample_predictions.py  test_model.py  validation.py  validation_diffusion.py  validation_nn.py
deepr/validation/netcdf/: metrics.py  validation.py  visualize.py
deepr/visualizations/: giffs.py  plot_maps.py  plot_rose.py  plot_samples.py
docs/: conf.py  index.md
docs/usage/: data.md  methodology.md  references.md
resources/: configuration_diffusion.yml  configuration_nn_bicubic.yml  configuration_nn_evaluation.yml  configuration_nn_swin2sr.yml  configuration_vqvae.yml
scripts/: data_download.py  data_subdomain_extraction.py  dump_model_predictions.py  train_diffusion.py  train_model.py  validate_model.py
scripts/download/: climate_data_store.py  european_weather_cloud.py
scripts/modeling/: generate_model_predictions.py  train_model.py
scripts/processing/: data_spatial_selection.py
tests/: test_00_version.py
tests/tests_data/: test_files.py
