[metadata]
name = deepr
license = Apache License 2.0
description = DeepR: Deep Reanalysis
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
include_package_data = True
[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = False

[mypy-cartopy.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-xskillscore.*]
ignore_missing_imports = True

[options.entry_points]
console_scripts =
    train_model = deepr.cli:train_model
